--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,14 +9,9 @@ trigger:
 pool: Default
 strategy:
   matrix:
-    Python27:
-      python.version: '2.7'
     Python35:
       python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
+    
 
 steps:
 - task: UsePythonVersion@0
@@ -25,7 +20,7 @@ steps:
   displayName: 'Use Python $(python.version)'
 
 - script: |
-    python -m pip install --upgrade pip
+    python3 -m pip install --upgrade pip
     pip install -r requirements.txt
   displayName: 'Install dependencies'
 
